--- a/hw-module/Makefile
+++ b/hw-module/Makefile
@@ -2,15 +2,19 @@ obj-m += hw_module.o
 
 PWD := $(CURDIR)
 
+BUILDROOT_DIR := $(CURDIR)/../buildroot
+LINUX_DIR := $(BUILDROOT_DIR)/output/build/linux-6.12.47
+COMPILER := $(BUILDROOT_DIR)/output/host/bin/riscv64-buildroot-linux-gnu-
+
 all:
-	$(MAKE) -C $(CURDIR)/../buildroot/output/build/linux-6.12.47/ \
+	$(MAKE) -C $(LINUX_DIR) \
 			M=$(PWD) \
 			ARCH=riscv \
-			CROSS_COMPILE=/home/vvdovin/aqua/tests/embedded-linux-sandbox/buildroot/output/host/bin/riscv64-buildroot-linux-gnu- \
+			CROSS_COMPILE=$(COMPILER) \
 			modules
 
 clean:
-	$(MAKE) -C $(CURDIR)/../buildroot/output/build/linux-6.12.47/ M=$(PWD) clean
+	$(MAKE) -C $(LINUX_DIR) M=$(PWD) clean
 
 help:
-	$(MAKE) -C $(CURDIR)/../buildroot/output/build/linux-6.12.47/ M=$(PWD) help
+	$(MAKE) -C $(LINUX_DIR) M=$(PWD) help
